--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -50,9 +51,9 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.2.0",
+    "react": "^16.3.0-alpha.2",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.0-alpha.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -62,8 +63,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "peerDependencies": {
-    "react": ">=16.3-alpha.2",
-    "react-dom": ">=16.3-alpha.2"
+    "react": ">=16.3.0-alpha.2",
+    "react-dom": ">=16.3.0-alpha.2"
   },
   "jest": {
     "collectCoverageFrom": [
